--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                         <li><a href="account.html">Account</a></li>
                     </ul>
                 </nav>
-                <img src="/images/cart.png" width="30px" height="30px">
-                <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
+                <img src="./images/cart.png" width="30px" height="30px">
+                <img src="./images/menu.png" class="menu-icon" onclick="menutoggle()">
             </div>
             <div class="row">
                 <div class="col-2">
@@ -41,7 +41,7 @@
                     <a href="" class="btn">Explore Now &#8594;</a>
                 </div>
                 <div class="col-2">
-                    <img src="/images/image1.png">
+                    <img src="./images/image1.png">
                 </div>
             </div>
         </div>
@@ -52,13 +52,13 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-3">
-                    <img src="/images/category-1.jpg">
+                    <img src="./images/category-1.jpg">
                 </div>
                 <div class="col-3">
-                    <img src="/images/category-2.jpg">
+                    <img src="./images/category-2.jpg">
                 </div>
                 <div class="col-3">
-                    <img src="/images/category-3.jpg">
+                    <img src="./images/category-3.jpg">
                 </div>
             </div>
         </div>
@@ -69,7 +69,7 @@
         <h2 class="title">Featured Products</h2>
         <div class="row">
             <div class="col-4">
-                <img src="/images/product-1.jpg">
+                <img src="./images/product-1.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -81,7 +81,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-2.jpg">
+                <img src="./images/product-2.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -93,7 +93,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-3.jpg">
+                <img src="./images/product-3.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -104,7 +104,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-4.jpg">
+                <img src="./images/product-4.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -118,7 +118,7 @@
         <h2 class="title">Latest Products</h2>
         <div class="row">
             <div class="col-4">
-                <img src="/images/product-5.jpg">
+                <img src="./images/product-5.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -130,7 +130,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-6.jpg">
+                <img src="./images/product-6.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -142,7 +142,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-7.jpg">
+                <img src="./images/product-7.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -153,7 +153,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-8.jpg">
+                <img src="./images/product-8.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -166,7 +166,7 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="/images/product-9.jpg">
+                <img src="./images/product-9.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -178,7 +178,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-10.jpg">
+                <img src="./images/product-10.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -190,7 +190,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-11.jpg">
+                <img src="./images/product-11.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -201,7 +201,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-12.jpg">
+                <img src="./images/product-12.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -219,7 +219,7 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-2">
-                    <img src="/images/exclusive.png" class="offer-img">
+                    <img src="./images/exclusive.png" class="offer-img">
                 </div>
                 <div class="col-2">
                     <p>Exclusively Available on RedStore</p>
@@ -248,7 +248,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-half"></i>
                     </div>
-                    <img src="/images/user-1.png" alt="">
+                    <img src="./images/user-1.png" alt="">
                     <h3>Sean Parker</h3>
                 </div>
                 <div class="col-3">
@@ -262,7 +262,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-half"></i>
                     </div>
-                    <img src="/images/user-2.png" alt="">
+                    <img src="./images/user-2.png" alt="">
                     <h3>Mike Smith</h3>
                 </div>
                 <div class="col-3">
@@ -276,7 +276,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-half"></i>
                     </div>
-                    <img src="/images/user-3.png">
+                    <img src="./images/user-3.png">
                     <h3>Mery Cury</h3>
                 </div>
             </div>
@@ -288,19 +288,19 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-5">
-                    <img src="/images/logo-godrej.png">
+                    <img src="./images/logo-godrej.png">
                 </div>
                 <div class="col-5">
-                    <img src="/images/logo-oppo.png">
+                    <img src="./images/logo-oppo.png">
                 </div>
                 <div class="col-5">
-                    <img src="/images/logo-coca-cola.png">
+                    <img src="./images/logo-coca-cola.png">
                 </div>
                 <div class="col-5">
-                    <img src="/images/logo-paypal.png">
+                    <img src="./images/logo-paypal.png">
                 </div>
                 <div class="col-5">
-                    <img src="/images/logo-philips.png">
+                    <img src="./images/logo-philips.png">
                 </div>
             </div>
         </div>
@@ -314,12 +314,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="./images/play-store.png">
+                        <img src="./images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images/logo-white.png">
+                    <img src="./images/logo-white.png">
                     <p>Our puropse Is to Sustainability Make the pleasure and Benifits of Sports Accessible to the Many.
                     </p>
                 </div>
