--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img src="/images/logo.png" width="125px">
+                    <img src="./images/logo.png" width="125px">
                 </div>
                 <nav>
                     <ul id="MenuItems">
@@ -29,8 +29,8 @@
                         <li><a href="account.html">Account</a></li>
                     </ul>
                 </nav>
-                <img src="/images/cart.png" width="30px" height="30px">
-                <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
+                <img src="./images/cart.png" width="30px" height="30px">
+                <img src="./images/menu.png" class="menu-icon" onclick="menutoggle()">
             </div>
         </div>
     
@@ -48,7 +48,7 @@
         <div class="row">
             <div class="col-4">
                 <a href="products_details.html">
-                <img src="/images/product-1.jpg">
+                <img src="./images/product-1.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -61,7 +61,7 @@
             </a>
             </div>
             <div class="col-4">
-                <img src="/images/product-2.jpg">
+                <img src="./images/product-2.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -73,7 +73,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-3.jpg">
+                <img src="./images/product-3.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -84,7 +84,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-4.jpg">
+                <img src="./images/product-4.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -97,7 +97,7 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="/images/product-5.jpg">
+                <img src="./images/product-5.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -109,7 +109,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-6.jpg">
+                <img src="./images/product-6.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -121,7 +121,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-7.jpg">
+                <img src="./images/product-7.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -132,7 +132,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-8.jpg">
+                <img src="./images/product-8.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -145,7 +145,7 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="/images/product-9.jpg">
+                <img src="./images/product-9.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -157,7 +157,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-10.jpg">
+                <img src="./images/product-10.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -169,7 +169,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-11.jpg">
+                <img src="./images/product-11.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -180,7 +180,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-12.jpg">
+                <img src="./images/product-12.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -209,12 +209,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="./images/play-store.png">
+                        <img src="./images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images/logo-white.png">
+                    <img src="./images/logo-white.png">
                     <p>Our puropse Is to Sustainability Make the pleasure and Benifits of Sports Accessible to the Many.
                     </p>
                 </div>
