--- a/products_details.html
+++ b/products_details.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="/images/logo.png" width="125px">
+                <img src="./images/logo.png" width="125px">
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -29,8 +29,8 @@
                     <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <img src="/images/cart.png" width="30px" height="30px">
-            <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <img src="./images/cart.png" width="30px" height="30px">
+            <img src="./images/menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
     </div>
 
@@ -38,19 +38,19 @@
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="/images/gallery-1.jpg" width="100%" id="ProductImg">
+                <img src="./images/gallery-1.jpg" width="100%" id="ProductImg">
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="/images/gallery-1.jpg" class="small-img">
+                        <img src="./images/gallery-1.jpg" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/images/gallery-2.jpg" class="small-img">
+                        <img src="./images/gallery-2.jpg" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/images/gallery-3.jpg" class="small-img">
+                        <img src="./images/gallery-3.jpg" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/images/gallery-4.jpg" class="small-img">
+                        <img src="./images/gallery-4.jpg" class="small-img">
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
     <div class="small-container">
         <div class="row">
             <div class="col-4">
-                <img src="/images/product-9.jpg">
+                <img src="./images/product-9.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -101,7 +101,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-10.jpg">
+                <img src="./images/product-10.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -113,7 +113,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-11.jpg">
+                <img src="./images/product-11.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -124,7 +124,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-12.jpg">
+                <img src="./images/product-12.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -149,12 +149,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and ios mobile phone.</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="./images/play-store.png">
+                        <img src="./images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images/logo-white.png">
+                    <img src="./images/logo-white.png">
                     <p>Our puropse Is to Sustainability Make the pleasure and Benifits of Sports Accessible to the Many.
                     </p>
                 </div>
