--- a/account.html
+++ b/account.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                   <a href="index.html"><img src="/images/logo.png" width="125px"></a>
+                   <a href="index.html"><img src="./images/logo.png" width="125px"></a>
                 </div>
                 <nav>
                     <ul>
@@ -29,8 +29,8 @@
                         <li><a href="account.html">Account</a></li>
                     </ul>
                 </nav>
-                <a href="cart.html"><img src="/images/cart.png" width="30px" height="30px"></a>
-                <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
+                <a href="cart.html"><img src="./images/cart.png" width="30px" height="30px"></a>
+                <img src="./images/menu.png" class="menu-icon" onclick="menutoggle()">
             </div>
         </div>
     </div>
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-2">
-                    <img src="/images/image1.png" width="100%">
+                    <img src="./images/image1.png" width="100%">
                 </div>
 
                 <div class="col-2">
